--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,7 @@
 .idea/**/contentModel.xml
 
 # Sensitive or high-churn files
-.idea/**/dataSources/
+.idea
 .idea/**/dataSources.ids
 .idea/**/dataSources.local.xml
 .idea/**/sqlDataSources.xml
@@ -259,5 +259,3 @@ buildNumber.properties
 *lol
 
 # End of https://www.gitignore.io/api/test,java,maven,intellij,intellij+iml
-/$CACHE_FILE$
-/$PRODUCT_WORKSPACE_FILE$
